@@ -1,6 +1,8 @@
 1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* actcltk.m4 (INCPLACES, LIBPLACES): Add cygwin paths.
+	
+	* actcltk.m4, acpng.m4: Loop over .so and .a within directories.
 
 	* acpng.m4 (md_FIND_LIB, md_FIND_INCLUDE): New macros.  Use both
 	in md_FIND_ZLIB and md_FIND_PNG.
